@@ -32,12 +32,13 @@ enum {
 	MODE_TORRENT   = 0x20,
 
 	/* misc options */
+	OPT_VERBOSE    = 0x01,
+	OPT_BRIEF      = 0x02,
 	OPT_EMBED_CRC  = 0x20,
 	OPT_RECURSIVE  = 0x40,
 	OPT_FOLLOW     = 0x80,
 	OPT_SKIP_OK    = 0x100,
 	OPT_IGNORE_CASE = 0x200,
-	OPT_VERBOSE    = 0x400,
 	OPT_PERCENTS   = 0x800,
 	OPT_BT_PRIVATE = 0x1000,
 	OPT_BT_TRANSMISSION = 0x2000,
